--- a/package.json
+++ b/package.json
@@ -3,17 +3,49 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/runtime": "^7.15.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/react": "^17.0.19",
+    "@types/react-helmet": "^6.1.2",
+    "axios": "^0.21.1",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "classnames": "^2.3.1",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.2.0",
+    "dotenv": "^10.0.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "i18next": "^20.6.0",
+    "module-alias": "^2.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "react-dotenv": "^0.1.3",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.1.2",
+    "react-i18next": "^11.11.4",
+    "react-router": "^5.2.0",
+    "react-scripts": "^4.0.3",
+    "recoil": "^0.4.1",
+    "sass": "^1.38.2",
+    "sass-loader": "^12.1.0",
+    "sass-resources-loader": "^2.2.4",
+    "style-loader": "^3.2.1",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
+    "typescript": "^4.4.2",
+    "web-vitals": "^1.0.1",
+    "webpack": "^5.51.1",
+    "webpack-dev-server": "^4.0.0",
+    "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-dotenv && webpack serve --open",
+    "build": "webpack --config ./webpack.config.js && npx style-dictionary build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +66,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router": "^5.1.16",
+    "style-dictionary": "^3.0.2",
+    "webpack-cli": "^4.8.0"
   }
 }
