--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/crypto-js": "^4.0.2",
     "@types/react": "^17.0.19",
     "@types/react-helmet": "^6.1.2",
+    "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "classnames": "^2.3.1",
     "copy-webpack-plugin": "^9.0.1",
+    "crypto-js": "^4.1.1",
     "css-loader": "^6.2.0",
     "dotenv": "^10.0.0",
     "file-loader": "^6.2.0",
@@ -30,6 +33,7 @@
     "react-helmet-async": "^1.1.2",
     "react-i18next": "^11.11.4",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "recoil": "^0.4.1",
     "sass": "^1.38.2",
