--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "html-webpack-plugin": "^5.3.2",
     "i18next": "^20.6.0",
     "module-alias": "^2.2.2",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
@@ -48,7 +49,7 @@
     "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "react-dotenv && webpack serve --open",
+    "start": "react-dotenv && webpack serve --host 0.0.0.0",
     "build": "webpack --config ./webpack.config.js && npx style-dictionary build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
