--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "crypto-js": "^4.1.1",
     "css-loader": "^6.2.0",
     "dotenv": "^10.0.0",
+    "dotenv-webpack": "^7.0.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "i18next": "^20.6.0",
     "module-alias": "^2.2.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
     "react-helmet": "^6.1.0",
