--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/radium": "^0.24.4",
     "@types/react": "^17.0.19",
     "@types/react-animations": "^1.0.0",
+    "@types/react-dom": "^17.0.10",
     "@types/react-helmet": "^6.1.2",
     "@types/react-router-dom": "^5.1.8",
     "animate.css": "^4.1.1",
