--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "sass-loader": "^12.3.0",
     "style-dictionary": "^3.0.2",
     "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.2.5",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "webpack": "^5.64.1",
     "webpack-cli": "^4.8.0",
