server.js, package.json, procfile

--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "babel-loader": "^8.2.3",
     "babel-plugin-transform-runtime": "^6.23.0",
     "classnames": "^2.3.1",
+    "compression": "^1.7.4",
     "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "i18next": "^20.6.0",
     "jest": "^27.3.1",
     "module-alias": "^2.2.2",
+    "path": "^0.12.7",
     "radium": "^0.26.1",
     "react": "^17.0.2",
     "react-animations": "^1.0.0",
