--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "recoil": "^0.4.1",
     "sass": "^1.38.2",
     "sass-resources-loader": "^2.2.4",
+    "serve": "^13.0.2",
     "typescript": "^4.4.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
@@ -55,7 +56,7 @@
     "build": "webpack --config ./webpack.config.js && npx style-dictionary build",
     "build:prod": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "watch": "./node_modules/.bin/webpack --watch --config webpack.config.js",
-    "serve": "",
+    "serve": "serve -s build",
     "test": "jest",
     "eject": "react-scripts eject"
   },
