--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
+    "eslint-plugin-react-security": "^0.1.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.1",
     "i18next": "^20.6.0",
