--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/babel__generator": "^7.6.3",
     "@types/crypto-js": "^4.0.2",
     "@types/radium": "^0.24.4",
     "@types/react": "^17.0.35",
@@ -31,6 +32,7 @@
     "dotenv": "^10.0.0",
     "eslint-plugin-react-security": "^0.1.0",
     "express": "^4.17.1",
+    "global": "^4.4.0",
     "http-proxy-middleware": "^2.0.1",
     "i18next": "^20.6.0",
     "jest": "^27.3.1",
@@ -41,6 +43,7 @@
     "react-animations": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
+    "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.1.2",
     "react-i18next": "^11.11.4",
     "react-router": "^5.2.0",
@@ -53,6 +56,7 @@
     "serve": "^13.0.2",
     "typescript": "^4.4.2",
     "web-vitals": "^1.0.1",
+    "webpack": "^5.64.3",
     "yup": "^0.32.9"
   },
   "scripts": {
@@ -111,7 +115,6 @@
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.2.5",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "webpack": "^5.64.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.5.0"
   },
